Bug 436366 - Crash opening Settings
Summary: Crash opening Settings
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.0
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
: 420030 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-29 15:30 UTC by Luke-Jr
Modified: 2021-07-03 22:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke-Jr 2021-04-29 15:30:39 UTC
Application: konsole (21.04.0)

Qt Version: 5.15.2
Frameworks Version: 5.81.0
Operating System: Linux 4.19.183-gentoo-nobuiltinmemcmp ppc64le
Windowing System: X11
Drkonqi Version: 5.21.4
Distribution: "Gentoo Base System release 2.7"

-- Information about the crash:
- What I was doing when the application crashed:

Simply trying to open Konsole Settings.

Cannot reproduce.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Konsole (konsole), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7fffba335ff0 (LWP 54906))]
[KCrash Handler]
#6  0x000000013f538a90 in ?? ()
#7  0x00007fffbc2a85d4 in QWidget::show (this=0x7fffb0069340) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qwidget.cpp:7669
#8  0x00007fffbdeb9b9c in Konsole::MainWindow::showSettingsDialog (this=0x7fffb0058f50, showProfilePage=<optimized out>) at /var/tmp/portage/kde-apps/konsole-21.04.0/work/konsole-21.04.0/src/MainWindow.cpp:768
#9  0x00007fffbdec3e74 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (Konsole::MainWindow::*)(bool)>::call (arg=<optimized out>, o=<optimized out>, f=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:152
#10 QtPrivate::FunctionPointer<void (Konsole::MainWindow::*)(bool)>::call<QtPrivate::List<bool>, void> (arg=<optimized out>, o=<optimized out>, f=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:185
#11 QtPrivate::QSlotObject<void (Konsole::MainWindow::*)(bool), QtPrivate::List<bool>, void>::impl (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:418
#12 0x00007fffbda57fa8 in QtPrivate::QSlotObjectBase::call (a=0x7fffd113aec8, r=0x7fffb0058f50, this=0x13fd6fcd0) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#13 doActivate<false> (sender=0x13fdb5cc0, signal_index=<optimized out>, argv=0x7fffd113aec8) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qobject.cpp:3886
#14 0x00007fffbda4dccc in QMetaObject::activate (sender=<optimized out>, m=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qobject.cpp:3946
#15 0x00007fffbc242448 in QAction::triggered (this=<optimized out>, _t1=<error reading variable: value has been optimized out>) at .moc/moc_qaction.cpp:376
#16 0x00007fffbc245fe8 in QAction::activate (this=0x13fdb5cc0, event=<optimized out>) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qaction.cpp:1161
#17 0x00007fffbc46fcc8 in QMenuPrivate::activateCausedStack (this=this@entry=0x13fd88d30, causedStack=..., action=<optimized out>, action@entry=0x13fdb5cc0, action_e=<optimized out>, action_e@entry=QAction::Trigger, self=<optimized out>, self@entry=true) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/widgets/qmenu.cpp:1384
#18 0x00007fffbc4798e4 in QMenuPrivate::activateAction (this=this@entry=0x13fd88d30, action=action@entry=0x13fdb5cc0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/widgets/qmenu.cpp:1461
#19 0x00007fffbc47b518 in QMenu::mouseReleaseEvent (this=<optimized out>, e=0x7fffd113b700) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/widgets/qmenu.cpp:2966
#20 0x00007fffbc2ad7cc in QWidget::event (this=0x13ff7c320, event=0x7fffd113b700) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qwidget.cpp:8645
#21 0x00007fffbc47e49c in QMenu::event (this=0x13ff7c320, e=0x7fffd113b700) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/widgets/qmenu.cpp:3088
#22 0x00007fffbc24d5a8 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x13ff7c320, e=0x7fffd113b700) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qapplication.cpp:3632
#23 0x00007fffbc259ea4 in QApplication::notify (this=<optimized out>, receiver=0x13ff7c320, e=0x7fffd113b700) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qapplication.cpp:3076
#24 0x00007fffbda054d0 in QCoreApplication::notifyInternal2 (receiver=0x13ff7c320, event=0x7fffd113b700) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1063
#25 0x00007fffbda058a8 in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1470
#26 0x00007fffbc258008 in QApplicationPrivate::sendMouseEvent (receiver=0x13ff7c320, event=0x7fffd113b700, alienWidget=0x0, nativeWidget=0x13ff7c320, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=<optimized out>, onlyDispatchEnterLeave=<optimized out>) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qapplication.cpp:2614
#27 0x00007fffbc2d5888 in QWidgetWindow::handleMouseEvent (this=this@entry=0x13f1358c0, event=event@entry=0x7fffd113bca8) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qwidgetwindow.cpp:580
#28 0x00007fffbc2d9578 in QWidgetWindow::event (this=0x13f1358c0, event=0x7fffd113bca8) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qwidgetwindow.cpp:300
#29 0x00007fffbc24d5a8 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x13f1358c0, e=0x7fffd113bca8) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qapplication.cpp:3632
#30 0x00007fffbc2598c8 in QApplication::notify (this=0x13e896fd0, receiver=0x13f1358c0, e=0x7fffd113bca8) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qapplication.cpp:2972
#31 0x00007fffbda054d0 in QCoreApplication::notifyInternal2 (receiver=0x13f1358c0, event=0x7fffd113bca8) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1063
#32 0x00007fffbda058a8 in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1470
#33 0x00007fffbba6d368 in QGuiApplicationPrivate::processMouseEvent (e=0x13ffc5f80) at /var/tmp/portage/dev-qt/qtgui-5.15.2-r1/work/qtbase-everywhere-src-5.15.2/src/gui/kernel/qguiapplication.cpp:2282
#34 0x00007fffbba6f354 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x13ffc5f80) at /var/tmp/portage/dev-qt/qtgui-5.15.2-r1/work/qtbase-everywhere-src-5.15.2/src/gui/kernel/qguiapplication.cpp:2002
#35 0x00007fffbba30f2c in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /var/tmp/portage/dev-qt/qtgui-5.15.2-r1/work/qtbase-everywhere-src-5.15.2/src/gui/kernel/qwindowsysteminterface.cpp:1169
#36 0x00007fffb5d79fd0 in xcbSourceDispatch (source=<optimized out>) at /var/tmp/portage/dev-qt/qtgui-5.15.2-r1/work/qtbase-everywhere-src-5.15.2/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:105
#37 0x00007fffbac279d4 in g_main_dispatch (context=context@entry=0x7fffb0019230) at ../glib-2.66.7/glib/gmain.c:3325
#38 0x00007fffbac2cc14 in g_main_context_dispatch (context=0x7fffb0019230) at ../glib-2.66.7/glib/gmain.c:4043
#39 0x00007fffbac2ce44 in g_main_context_iterate (context=context@entry=0x7fffb0019230, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib-2.66.7/glib/gmain.c:4119
#40 0x00007fffbac2cf4c in g_main_context_iteration (context=0x7fffb0019230, may_block=<optimized out>) at ../glib-2.66.7/glib/gmain.c:4184
#41 0x00007fffbda91448 in QEventDispatcherGlib::processEvents (this=0x13e90d010, flags=...) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qeventdispatcher_glib.cpp:423
#42 0x00007fffb5d7a5e8 in QXcbGlibEventDispatcher::processEvents (this=<optimized out>, flags=...) at /var/tmp/portage/dev-qt/qtgui-5.15.2-r1/work/qtbase-everywhere-src-5.15.2/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:143
#43 0x00007fffbda02558 in QEventLoop::processEvents (this=<optimized out>, flags=...) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qeventloop.cpp:139
#44 0x00007fffbda02d0c in QEventLoop::exec (this=0x7fffd113c218, flags=...) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/include/QtCore/../../src/corelib/global/qflags.h:69
#45 0x00007fffbda0fd70 in QCoreApplication::exec () at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/include/QtCore/../../src/corelib/global/qflags.h:121
#46 0x00007fffbba5b854 in QGuiApplication::exec () at /var/tmp/portage/dev-qt/qtgui-5.15.2-r1/work/qtbase-everywhere-src-5.15.2/src/gui/kernel/qguiapplication.cpp:1867
#47 0x00007fffbc24d4c4 in QApplication::exec () at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qapplication.cpp:2824
#48 0x00007fffbdecbd84 in kdemain (argc=<optimized out>, argv=<optimized out>) at /var/tmp/portage/kde-apps/konsole-21.04.0/work/konsole-21.04.0/src/main.cpp:220
#49 0x0000000130db17ec in main (argc=<optimized out>, argv=<optimized out>) at src/konsole_dummy.cpp:3
[Inferior 1 (process 54906) detached]

Possible duplicates by query: bug 436327, bug 435427, bug 434600, bug 434194, bug 433524.

Reported using DrKonqi
Comment 1 Bug Janitor Service 2021-05-01 16:01:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/387
Comment 2 Carlos Alves 2021-05-01 17:36:18 UTC
Git commit 49692c0f14230781b1fa48332ff9e334c1b1f997 by Carlos Alves.
Committed on 01/05/2021 at 16:02.
Pushed by hindenburg into branch 'master'.

Fix crash showing Settings Dialog

When you open settings and close it, than open a new window, than
close the old window, the MainWindow with the settings will
delete the configDialog. If you try to open settings againg it crashes.

Fix is each MainWindow now has its own configDialog.

M  +11   -6    src/MainWindow.cpp
M  +2    -0    src/settings/ConfigurationDialog.cpp

https://invent.kde.org/utilities/konsole/commit/49692c0f14230781b1fa48332ff9e334c1b1f997
Comment 3 Kurt Hindenburg 2021-05-01 17:45:03 UTC
Git commit 7b769ff141e9d0f081e81fdf31f2bf44a5849af4 by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 01/05/2021 at 17:42.
Pushed by hindenburg into branch 'release/21.04'.

Fix crash showing Settings Dialog

When you open settings and close it, than open a new window, than
close the old window, the MainWindow with the settings will
delete the configDialog. If you try to open settings againg it crashes.

Fix is each MainWindow now has its own configDialog.
(cherry picked from commit 49692c0f14230781b1fa48332ff9e334c1b1f997)

M  +11   -6    src/MainWindow.cpp
M  +2    -0    src/settings/ConfigurationDialog.cpp

https://invent.kde.org/utilities/konsole/commit/7b769ff141e9d0f081e81fdf31f2bf44a5849af4
Comment 4 ninjalj 2021-07-03 22:51:41 UTC
*** Bug 420030 has been marked as a duplicate of this bug. ***