Fix crash showing Settings Dialog

When you open settings and close it, than open a new window, than
close the old window, the MainWindow with the settings will
delete the configDialog. If you try to open settings againg it crashes.

Fix is each MainWindow now has its own configDialog.

BUG: 436366
(cherry picked from commit 49692c0f14230781b1fa48332ff9e334c1b1f997)